@startuml
hide circle
skinparam classAttributeIconSize 0

class RegisterEmployeeView {
    +requestEmployeeData(): EmployeeData
    +requestRoleSelection(): Role
    +showEmployeeData(employee: Employee)
    +requestConfirmation(): bool
}

class RegisterEmployeeController {
    +createEmployee(string name, string postalAddress, string phoneNumber, string email, string citizenCardNumber, string role): Employee
    +saveRegisteredEmployee(Employee employee): Result
}

class Administrator {
    -name
    -email
    -phoneNumber
    +getEmployeeContainer(): EmployeeContainer
}

class EmployeeContainer {
    +create(string name, string postalAddress, string phoneNumber, string email, string citizenCardNumber, string role): Employee
    +save(Employee employee): Result
    +checkDuplicates(Employee employee): bool
    +findById(string id): Employee
    +getAll(): List<Employee>

    -add(Employee employee): void
}

class Employee {
    -employee_id
    -name
    -postalAddress
    -phoneNumber
    -email
    -citizenCardNumber
    -role
    +isValid(): bool
}

class Nurse {
}

class Receptionist {
}

Employee <|-- Nurse
Employee <|-- Receptionist

Administrator "1" -right-> "1" EmployeeContainer : maintains
EmployeeContainer "1" -right-> "0..*" Employee : records

RegisterEmployeeView ..> RegisterEmployeeController
RegisterEmployeeController ..> Administrator
RegisterEmployeeController ..> EmployeeContainer
RegisterEmployeeController ..> Employee

@enduml
